<resources>
    <string name="app_name">KanbanApp</string>
    <string name="title_activity_main">KanbanApp</string>
    <string name="title_activity_login">Add Task</string>
    <string name="add_tab">Add new tab</string>
    <string name="add_tarea">Add new Task</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="editTable">Edit Tab</string>
    <string name="taskName">Task Name</string>
    <string name="taskDescription">Description</string>
    <string name="video">JF's video</string>
    <string name="camera"> Take a picture </string>
    <string name="viewTarea"> View </string>
    <string name="filechooser"> Attach file </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btnActualizar">Update</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_edit">Edit Task</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_ingreso_nueva_tarea">IngresoNuevaTarea</string>
    <string name="tab_text_1">Item details</string>
    <string name="tab_text_2">Reminder</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_login_firebase">Sign in</string>
    <string name="title_activity_info_user">InfoUser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nombre">Android Studio</string>
    <string name="correo">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
